// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SuccessMessages renders the messages 1`] = `
<div
  aria-live="polite"
  id="success-messages"
>
  <div
    className="messages success"
  >
    <ul>
      <li
        key="0"
      >
        User updated successfully.
      </li>
    </ul>
  </div>
</div>
`;

exports[`SuccessMessages when there are no messages only renders the outer div 1`] = `
<div
  aria-live="polite"
  id="success-messages"
/>
`;
